--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,20 @@ debug = true
 opt-level = 3
 
 [dependencies]
+rocket = "0.3"
+rocket_codegen = "0.3"
 rand = "0.3"
-iron = "0.5"
-router = "0.5"
-handlebars-iron = "0.25"
+serde =  "1.0"
+serde_derive = "1.0"
 serde_json = "1.0"
 urlencoded = "0.5"
 config = "0.7"
 ring-pwhash = "0.11"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 time = "0.1"
+maplit = "0.1"
+
+[dependencies.rocket_contrib]
+version = "0.3"
+default-features = false
+features = ["handlebars_templates", "json"]
